samples/_failures_safe/1761095797_048367_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_481838da.c: In function ‘matrix_transpose’:
./samples/SAFE/__tmp_481838da.c:152:39: error: expected ‘]’ at end of input
  152 |             result[j][i] = matrix[i][j
      |                                       ^
      |                                       ]
./samples/SAFE/__tmp_481838da.c:152:13: error: expected declaration or statement at end of input
  152 |             result[j][i] = matrix[i][j
      |             ^~~~~~
./samples/SAFE/__tmp_481838da.c:152:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_481838da.c:152:13: error: expected declaration or statement at end of input
